# aoc-2021

./: README.md
day5/src/: main.rs
day6-v2/: day6.py  pyproject.toml
day7/src/: main.rs
fast/: .gitignore  README.md
fast/day03/: day3.py
fast/day04/: day4.py
fast/day05/: day5.py
fast/day08/: day8.py
fast/day10/: day10.py
fast/day11/: day11.py
fast/day11-v2/: README.md  day11.py
fast/day12/: day12.py
fast/day13/: day13.py
fast/day14/: day14.py
fast/day14-v2/: day14.py
fast/day15/: day15.py  day15_copout.py
fast/day16/: day16.py
fast/day17/: day17.py
fast/day18/: day18.py
fast/day19/: day19.py
fast/day2/: day2.py
fast/day20/: day20.py
fast/day21/: day21.py
fast/day22/: day22.py
fast/day23/: day23.py
fast/day24/: answer.txt  day24.py  notes.txt
fast/day25/: day25.py
fast/day6/: day6.py
fast/day7/: day7.py
fast/day8/: day8.py
fast/day9/: day9.py
rust/: .gitignore
rust/day1/src/: main.rs
rust/day2/src/: main.rs
rust/day3/src/: main.rs
rust/day4/src/: main.rs
rust/day5/src/: main.rs
rust/day6-v2/: day6.py
rust/day6/src/: main.rs
rust/day8/: README.md
