[tool.poetry]
name = "day6-v2"
version = "0.1.0"
description = ""
authors = ["David Buckley <david@davidbuckley.ca>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21.4"
aocd = "^0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
